feat(auth): add role-based auth with Clerk

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Clerk Authentication
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxxxxx
 CLERK_SECRET_KEY=sk_test_xxxxxx
+# Clerk JWT Template used to include the `role` claim
+CLERK_JWT_TEMPLATE_NAME=payroll
 
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=your_project_url
