Add Prisma setup

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ CLERK_JWT_TEMPLATE_NAME=payroll
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=your_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
+# PostgreSQL connection for Prisma
+DATABASE_URL=postgresql://username:password@db.supabase.co:5432/postgres
