feat: add bulk edit and payslip confirmation

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ NEXT_PUBLIC_SUPABASE_URL=your_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
 # PostgreSQL connection for Prisma
 DATABASE_URL=postgresql://username:password@db.supabase.co:5432/postgres
+
+# Bulk edit fields to expose in the UI
+NEXT_PUBLIC_BULK_EDIT_FIELDS=parking_allowance,salary_advance_deduction
+
